# axon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  bench_axon.rs  bench_safetensors.py  generate_models.py
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: cli_smoke.rs
core/src/: convert.rs  error.rs  header.rs  lib.rs  manifest.rs  mmap_loader.rs  tensor.rs
docs/: benchmarks.md  format-versioning.md  lora-runtime.md  paging-design.md  partial-loading.md  runtime-architecture.md  spec.md  zero-copy.md
examples/: laptop_large_model_demo.py
ffi/src/: lib.rs
include/: axon.h
infer/: Cargo.toml
infer/src/: chat.rs  dtype.rs  gemma4.rs  kv_cache.rs  lib.rs  model.rs  ops.rs  quantized.rs  sampling.rs  tokenizer.rs  transformer.rs
python/: README.md  pyproject.toml
python/axon/: _bindings.py  runtime.py
runtime/: Cargo.toml
runtime/benches/: runtime.rs
runtime/src/: lib.rs  lora.rs  mmap_store.rs  paging.rs  runtime.rs  slice.rs  stats.rs  tensor_cache.rs
runtime/tests/: security.rs
tests/: integration.rs
